2012-12-27  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-file-accessible-directory-p): New defun.

	* net/tramp-adb.el (tramp-adb-file-name-handler-alist):
	* net/tramp-gvfs.el (tramp-gvfs-file-name-handler-alist):
	* net/tramp-sh.el (tramp-sh-file-name-handler-alist): Add handler
	for `file-accessible-directory-p'.  (Bug#13275)

2012-12-27  Sam Steingold  <sds@gnu.org>

	* progmodes/cperl-mode.el (cperl-calculate-indent): Do not stagger
	continuations, see <http://stackoverflow.com/questions/3582436>.

2012-12-27  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-indent-beg-re): Only allow "class",
	"module" and "def" to have indentation before them.  Regression
	from revno:109911 (see the new test).

	* progmodes/ruby-mode.el: Bump the version to 1.2 (Bug#13200).

2012-12-27  Alan Mackenzie  <acm@muc.de>

	Speed up fontification where there's large brace blocks.
	* progmodes/cc-fonts.el (c-font-lock-enclosing-decls): Add a limit
	to a call of c-beginning-of-decl-1.

2012-12-27  Vitalie Spinu  <spinuvit@gmail.com>  (tiny change)

	* comint.el (comint-adjust-window-point): New function.
	(comint-postoutput-scroll-to-bottom): Call
	comint-adjust-window-point (Bug#13248).

2012-12-26  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (auto-mode-alist): `purecopy' the
	Rakefile regexp.
	(auto-mode-alist): Associate .gemspec files with ruby-mode
	(https://bugs.ruby-lang.org/issues/5453).

2012-12-26  Jürgen Hötzel  <juergen@archlinux.org>

	* net/tramp-adb.el (tramp-adb-get-ls-command): New defun.  Suppress
	coloring, if possible (required for BusyBox based systems like
	CynagenMod).
	(tramp-adb-handle-file-attributes)
	(tramp-adb-handle-insert-directory)
	(tramp-adb-handle-file-name-all-completions): Use it.
	(tramp-adb-get-toolbox): New defun.  Check for remote shell
	implementation (BusyBox or Toolbox).

2012-12-24  Constantin Kulikov <zxnotdead@gmail.com>  (tiny change)
