@@ -1,3 +1,12 @@
+2012-12-27  Juri Linkov  <juri@jurta.org>
+
+	* frame.el (frame-maximization-style): Remove user option.
+	(cycle-frame-maximized): Remove function.
+	(toggle-frame-maximized): Rewrite and bind to M-<f10>.
+	(toggle-frame-fullscreen): New command bound to <f11> instead of
+	`toggle-frame-maximized'.
+	http://lists.gnu.org/archive/html/emacs-devel/2012-12/msg00703.html
+
 2012-12-27  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/tramp.el (tramp-handle-file-accessible-directory-p): New defun.
